Fixed Vertical Alignment
Improved vertical alignment of screen headers.

--- a/kohese-portal/client/src/components/app-frame/app-bar/appbar.component.scss
+++ b/kohese-portal/client/src/components/app-frame/app-bar/appbar.component.scss
@@ -22,6 +22,9 @@
       color: white;
       background-color: $buttonAccentColor;
     }
+    text-align: left;
+    border-right: 1px solid white;
+    padding: 10px;
   }
    .navbar-disconnected {
     color: white;
